<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="20dp">

        <TableRow
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/host"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edt_host"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:hint="@string/host_hint"
                android:singleLine="true"/>

        </TableRow>

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/zone_name"
                android:textStyle="bold"
                android:layout_gravity="start|center_vertical"/>

            <!--<EditText
                android:id="@+id/edt_zone_name"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:hint="ex: ABCD"
                android:singleLine="true"
                android:background="@drawable/bg_edittext"
                android:capitalize="words"/>-->
            <Spinner
                android:id="@+id/spn_zone_name"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_spinner"/>
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/outlet_code"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edt_outlet_code"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_edittext"
                android:hint="@string/demo_code"
                android:singleLine="true"/>
        </TableRow>

    </TableLayout>

    <!--<RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rdbtn_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Offline Mode"/>

        <RadioButton
            android:id="@+id/rdbtn_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Online Mode"/>
    </RadioGroup>-->

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/button_close"
            android:textColor="@color/design_default_color_background"
            android:textAllCaps="false"
            android:stateListAnimator="@null"/>

        <Button
            android:id="@+id/btn_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/save"
            android:background="@drawable/bg_button"
            android:textColor="@color/design_default_color_background"
            android:textAllCaps="false"
            android:stateListAnimator="@null" />

    </LinearLayout>


</LinearLayout>
