<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="com.ms.inventory.activity.LoginActivity">


    <LinearLayout
        android:id="@+id/layout_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <View
            android:id="@+id/point"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_shape" />

        <TextView
            android:id="@+id/text_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_login"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/inventory"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Username"
            android:background="#44BFFFFF"
            android:hint="@string/username"
            android:imeOptions="actionGo"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#CCC" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Password"
            android:background="#44BFFFFF"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#CCC" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="@color/design_default_color_background" />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="25dp"
        android:gravity="center_vertical"
        android:text="@string/app_version"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <at.markushi.ui.CircleButton
        android:id="@+id/btn_setting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:padding="5dp"
        android:src="@drawable/ic_settings_2"
        app:cb_color="#0099CC00"
        app:cb_pressedRingWidth="12dip" />

</RelativeLayout>
