<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewTempScanItems">

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#E37F54"
        android:padding="5dp">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/white"
            android:hint="@string/search_items"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="6dp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:text="@string/search" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_temp_delete"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:text="@string/delete_all_data"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/button_clear"
        android:textAllCaps="false"
        android:stateListAnimator="@null" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVTempScanItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/search_layout"
        android:layout_above="@+id/btn_temp_delete" />

</RelativeLayout>