<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/layout_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_session"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/session"
            android:textAppearance="?android:textAppearanceLarge"
            android:maxLines="3"
            android:layout_marginHorizontal="20dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_delete_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_clear"
            android:text="Delete"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_session"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:onClick="onClick"
                android:padding="15dp"
                android:background="@drawable/bg_button"
                android:text="@string/scan_items"
                android:textColor="@color/design_default_color_background" />

            <Button
                android:id="@+id/btn_adjust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:onClick="onClick"
                android:padding="15dp"
                android:background="@drawable/bg_button"
                android:text="@string/adjust_items"
                android:textColor="@color/design_default_color_background" />

            <Button
                android:id="@+id/btn_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:padding="15dp"
                android:visibility="gone"
                android:background="@drawable/bg_button"
                android:text="@string/import_export"
                android:textColor="@color/design_default_color_background" />

            <TextView
                android:id="@+id/tv_qty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceLarge" />

        </LinearLayout>
    </ScrollView>

    <!--<ScrollView
        android:id="@+id/sv_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_session"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:onClick="onClick"
                android:padding="15dp"
                android:background="@drawable/bg_button"
                android:text="@string/scan_items"
                android:textColor="@color/design_default_color_background" />

            <Button
                android:id="@+id/btn_adjust"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:onClick="onClick"
                android:padding="15dp"
                android:background="@drawable/bg_button"
                android:text="@string/adjust_items"
                android:textColor="@color/design_default_color_background" />

            <Button
                android:id="@+id/btn_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:padding="15dp"
                android:visibility="gone"
                android:background="@drawable/bg_button"
                android:text="@string/import_export"
                android:textColor="@color/design_default_color_background" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_qty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sv_buttons"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge" />

    </LinearLayout>-->

</RelativeLayout>
